Fixing clustered examples on MacOS (and possibly other envs)